cabal-version:       2.2
name:                hyborg
version:             0
synopsis:            multithreaded borgbackup clone
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
-- category:            Network
build-type:          Simple

Source-repository head
  type:              git
  location:          https://github.com/l29ah/hyborg.git

--Source-repository this
--  type:              git
--  location:          https://github.com/l29ah/hyborg.git
--  tag:               0

common stuff
  -- not using -gq as it interferes with profiling, see https://gitlab.haskell.org/ghc/ghc/-/issues/19588
  ghc-options:         -W -fno-warn-tabs -O2 -Werror=missing-fields -threaded -rtsopts "-with-rtsopts -N"
  build-depends:       base >= 4.9 && < 5,
                       containers ^>= 0.6.0.1,
                       bytestring >= 0.10.8.2 && < 0.12,
                       msgpack-binary ^>= 0.0.14,
                       msgpack-types ^>= 0.0.4,
                       text ^>= 1.2.3.1,
                       conduit ^>= 1.3.2,
                       conduit-extra ^>= 1.3.4,
                       binary-conduit ^>= 1.3.1,
                       binary ^>= 0.8.6,
                       process ^>= 1.6.5.0,
                       lz4-hs ^>= 0.1.5.0,
                       cryptohash-sha256 ^>= 0.11.101.0,
                       array ^>= 0.5.3.0,
                       optparse-applicative >= 0.15.1.0 && < 0.17,
                       string-class ^>= 0.1.7.0,
                       base16-bytestring >= 1.0 && < 1.1,
                       datetime ^>= 0.3.1,
                       casing ^>= 0.1.4.1,
                       sop-core ^>= 0.5.0.1,
                       generics-sop ^>= 0.5.1.0,
                       record-hasfield ^>= 1.0,
                       xdg-basedir ^>= 0.2.2,
                       unordered-containers ^>= 0.2.12.0,
                       hashable >= 1.2.7.0 && < 1.5,
                       unix ^>= 2.7.2.2,
                       data-default ^>= 0.7.1.1,
                       entropy ^>= 0.4.1.6,
                       cryptonite >= 0.26 && < 0.31,
                       memory >= 0.15.0 && < 0.18,
                       time >= 1.9.3 && < 1.12,
                       directory ^>= 1.3.6,
                       stm ^>= 2.5,
                       stm-conduit ^>= 4.0.1,
  if impl(ghc < 9.1)
    build-depends:     record-dot-preprocessor ^>= 0.2.6
  default-language:    Haskell2010
  other-modules:
                       Cache
                       Chunker
                       Chunker.BuzHash
                       Compression
                       Object
                       RPC
                       Types
                       Types.Generics

executable hyborg
  import: stuff
  main-is:             Main.hs
test-suite spec
  import: stuff
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
                       hspec == 2.*,
                       QuickCheck ^>= 2.14.2,
                       quickcheck-instances ^>= 0.3.25.2,
                       bytestring ^>= 0.11
  other-modules:
                       Chunker.BuzHashSpec
                       ObjectSpec
                       Types.GenericsSpec
benchmark benchmark
  import: stuff
  type: exitcode-stdio-1.0
  main-is: Benchmark.hs
  other-modules:
                       Chunker.Fixed
  build-depends:
                       criterion >= 1.5.6.2 && < 1.7,
                       parallel ^>= 3.2.2.0,
                       deepseq ^>= 1.4,
